src/test/ui/hrtb/issue-30786.nll.stderr
error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:108:15
   |
LL |     let map = source.map(|x: &_| x);
   |               ^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:114:18
   |
LL |     let filter = map.filter(|x: &_| true);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:114:18
   |
LL |     let filter = map.filter(|x: &_| true);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:114:18
   |
LL |     let filter = map.filter(|x: &_| true);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:114:18
   |
LL |     let filter = map.filter(|x: &_| true);
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:119:17
   |
LL |     let count = filter.count(); // Assert that we still have a valid stream.
   |                 ^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:119:17
   |
LL |     let count = filter.count(); // Assert that we still have a valid stream.
   |                 ^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:119:17
   |
LL |     let count = filter.count(); // Assert that we still have a valid stream.
   |                 ^^^^^^^^^^^^^^

error: higher-ranked subtype error
  --> $DIR/issue-30786.rs:119:17
   |
LL |     let count = filter.count(); // Assert that we still have a valid stream.
   |                 ^^^^^^^^^^^^^^

error: aborting due to 9 previous errors

